--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: 'Quicksand', sans-serif;
 }
+*::selection {
+    background-color: #bbb;
+}
 a {
     color: #252525;
 }
@@ -49,11 +52,8 @@ section * {
     display: block;
     margin-bottom: 50px;
     border-radius: 50%;
+    box-shadow: 0 0 10px #555;
     filter: grayscale(1);
-    transition: filter 0.5s;
-}
-.portrait:hover {
-    filter: grayscale(0);
 }
 .sidebar {
     height: 100vh;
@@ -62,6 +62,8 @@ section * {
     float: left;
     position: relative;
     padding: 20px 0;
+    box-shadow: none;
+    animation: shadow 0.3s ease-out 0.8s 1 forwards;
 }
 .navigation {
     list-style: none;
@@ -102,4 +104,65 @@ section * {
 }
 .contacts-list {
     list-style: none;
+}
+.main-section section {
+    opacity: 0;
+    animation: sectionslide 0.5s ease-out 0.3s 1 forwards;
+}
+.screen-split {
+    animation: splitterslide 0.9s ease-out 0s 1;
+}
+.navigation {
+    opacity: 0;
+    animation: asideslide 0.5s ease-out 0.5s 1 forwards;
+}
+.contacts {
+    opacity: 0;
+    animation: contactsslide 0.5s ease-out 0.8s 1 forwards;
+}
+@keyframes sectionslide {
+    from {
+        transform: translateX(-1vw);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes splitterslide {
+    from {
+        transform: translateY(-100vh);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+@keyframes asideslide {
+    from {
+        transform: translateX(1vw);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes contactsslide {
+    from {
+        transform: translateY(-2vh);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+@keyframes shadow {
+    from {
+        box-shadow: 0 0 0 #bbb;
+    }
+    to {
+        box-shadow: 8px 0 7px #bbb;
+    }
 }
